Using "X-Axis Mirror" while posing with auto keyframe on does not keyframe the mirrored bone #64533

Closed
opened 2019-05-13 02:59:38 +02:00 by Casey · 9 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39

Blender Version
Broken: version: 2.80 (sub 61), branch: master, commit date: 2019-05-11 18:20, hash: ebc44aae98

Short description of error
As the title states the mirror pose option does not seem to auto keyframe the mirrored bones on my rig.
For context I am using a Rigify rig and posing with an IK handle.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39 **Blender Version** Broken: version: 2.80 (sub 61), branch: master, commit date: 2019-05-11 18:20, hash: `ebc44aae98` **Short description of error** As the title states the mirror pose option does not seem to auto keyframe the mirrored bones on my rig. For context I am using a Rigify rig and posing with an IK handle.
Author

Added subscriber: @Casey-3

Added subscriber: @Casey-3

#65157 was marked as duplicate of this issue

#65157 was marked as duplicate of this issue
Member

Added subscribers: @ZedDB, @lichtwerk

Added subscribers: @ZedDB, @lichtwerk
Member

@ZedDB : mind checking?

@ZedDB : mind checking?
Sebastian Parborg was assigned by Philipp Oeser 2019-05-13 10:45:36 +02:00

@lichtwerk not at all! I'll take a look at this a bit later.

@lichtwerk not at all! I'll take a look at this a bit later.
Member

Added subscriber: @aceman500

Added subscriber: @aceman500

I've posted a fix: D5033

I've posted a fix: [D5033](https://archive.blender.org/developer/D5033)

This issue was referenced by 93ec2c94e5

This issue was referenced by 93ec2c94e5afef18563cbefa0d12275ebabb7ff0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64533
No description provided.