Fix T64533: Using "X-Axis Mirror" while posing with auto keyframe on does not keyframe the mirrored bone

Use an additional pose bone flag so we can keep track of mirrored bones that should be autokeyframed.

Reviewed By: Brecht

Differential Revision: https://developer.blender.org/D5033