source/blender/makesdna/DNA_armature_types.h
@@ -249,6 +249,8 @@ typedef enum eBone_Flag {
   BONE_RELATIVE_PARENTING = (1 << 23),
   /** it will add the parent end roll to the inroll */
   BONE_ADD_PARENT_END_ROLL = (1 << 24),
+  /** this bone was transformed by the mirror function */
+  BONE_TRANSFORM_MIRROR = (1 << 25),
 
 } eBone_Flag;
 
